05/ingress/kube/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://authservice.default.svc.cluster.local:80/authorize"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-UserId,X-UserName,X-UserFirstName,X-UserLastName"
spec:
  rules:
  - host: bit.homework
    http:
      paths:
      - backend:
          serviceName: userapp
          servicePort: 80
        path: /users/me
