05/ingress/kube/auth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-proxy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: bit.homework
    http:
      paths:
      - backend:
          serviceName: authservice
          servicePort: 80
        path: /auth($|/)(.*)
